2008-04-11  Stefan Jahn  <stefan@lkcc.org>

	* autogen.sh: Using automake to add missing files for build if
	needed.  Removed these files from CVS.

2008-04-10  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.14 and bumped up to version
	0.0.15.

2007-12-30  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.13 and bumped up to version
	0.0.14.

2007-12-08  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac:  Fixed Debian bug #437876 (handling nostrip build
	option).

2007-09-17  Stefan Jahn  <stefan@lkcc.org>

	* Loads of changes to avoid the "deprecated conversion from string
	constant to 'char*'" warning from the g++ 4.2.1 compiler.

2007-06-17  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.12 and bumped up to version
	0.0.13.

2007-06-05  Stefan Jahn  <stefan@lkcc.org>

	* contrib/Makefile.am (dist_man_MANS): Added 'ps2ps.pl' perl
	script (preprocessor) as well as an appropriate manpage.  Thanks
	to Friedrich Schmidt.

2007-03-29  Stefan Jahn  <stefan@lkcc.org>

	* qucs-edit/qucsedit.cpp (QucsEdit): Try using mono-spaced font
	in the editor text area.

2007-03-18  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.11 and bumped up to version
	0.0.12.

2006-09-11  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac:  Don't link using "-s" on MacOSX since it drops lazy
	dynamic symbol information.  Also checking for {moc|uic|lrelease|
	lupdate}-qt3 programs.  Added some more paths for Qt headers and
	libraries.

2006-09-01  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.10 and bumped up to version
	0.0.11.

2006-08-08  Stefan Jahn  <stefan@lkcc.org>

	* qucs-attenuator/qucsattenuator.cpp (slotSetText_Zin): 
	Synchronized Zout and Zin when specifying a bridged-tee.

	* qucs-attenuator/attenuatorfunc.cpp (Calc): Fixed computation
	routine for bridged-tee topology.

2006-05-29  Stefan Jahn  <stefan@lkcc.org>
