@@ -3,8 +3,8 @@
 .SH NAME
 ps2sp \- manual page for ps2sp version 4.14
 .SH SYNOPSIS
-.B perl
-\fIps2sp.pl \fR[\fIOPTION\fR] \fIinfile > outfile\fR
+.B ps2sp
+\fR[\fIOPTION\fR] \fIinfile > outfile\fR
 .SH DESCRIPTION
 .TP
 This utility is a SPICE netlist preprocessor.
