@@ -295,7 +295,7 @@ bool SpiceDialog::loadSpiceNetList(const QString& s)
     QString interpreter = "perl";
 #endif
     if (preprocessor == "ps2sp") {
-      script = "ps2sp.pl";
+      script = "ps2sp";
     } else if (preprocessor == "spicepp") {
       script = "spicepp.pl";
     } else if (preprocessor == "spiceprm") {
